# tinker-config-gui

./: CMakeLists.txt  Makefile  README  tc_gui.c  tc_gui.desktop  tc_gui.ui
