CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(tc_gui)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK2 REQUIRED gtk+-2.0)

INCLUDE_DIRECTORIES(${GTK2_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK2_INCLUDE_DIRS})

ADD_DEFINITIONS(${GTK2_CFLAGS_OTHER})
ADD_EXECUTABLE(tc_gui tc_gui.c)

TARGET_LINK_LIBRARIES(tc_gui ${GTK2_LIBRARIES})

install(TARGETS tc_gui
	RUNTIME DESTINATION bin)
install(FILES
	${CMAKE_CURRENT_SOURCE_DIR}/tc_gui.ui
	DESTINATION share/tc_gui)
install(FILES
	${CMAKE_CURRENT_SOURCE_DIR}/copyright
	DESTINATION share/doc/tc_gui)
install(FILES
	${CMAKE_CURRENT_SOURCE_DIR}/tc_gui.desktop
	DESTINATION share/applications)
set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Tinker Board <tinkerboard@asus.com>")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "xkeycaps")
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)

include(CPack)
